// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppSearchFilters should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-column el-flex-container"
      >
        <p
          class="apps-filters-mobile-browse-by apps-search-mobile-controls el-has-no-margin el-small-text"
        >
          Browse By
        </p>
      </div>
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <p
          class="apps-search-desktop-controls el-has-bold-text el-body-text"
        >
          Browse By
        </p>
      </div>
      <div
        class="el-fade-in apps-filters-categories el-multi-select-un-selected"
      >
        <input
          class="el-multi-select-checkbox"
          id="9"
          name="Tools"
          type="checkbox"
          value="9"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="9"
        >
          Tools
        </label>
        <input
          class="el-multi-select-checkbox"
          id="8"
          name="Social"
          type="checkbox"
          value="8"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="8"
        >
          Social
        </label>
        <input
          class="el-multi-select-checkbox"
          id="7"
          name="Marketing"
          type="checkbox"
          value="7"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="7"
        >
          Marketing
        </label>
        <input
          class="el-multi-select-checkbox"
          id="6"
          name="Communication"
          type="checkbox"
          value="6"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="6"
        >
          Communication
        </label>
        <input
          class="el-multi-select-checkbox"
          id="5"
          name="Media"
          type="checkbox"
          value="5"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="5"
        >
          Media
        </label>
        <input
          class="el-multi-select-checkbox"
          id="4"
          name="Events"
          type="checkbox"
          value="4"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="4"
        >
          Events
        </label>
        <input
          class="el-multi-select-checkbox"
          id="3"
          name="Finance"
          type="checkbox"
          value="3"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="3"
        >
          Finance
        </label>
        <input
          class="el-multi-select-checkbox"
          id="2"
          name="Productivity"
          type="checkbox"
          value="2"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="2"
        >
          Productivity
        </label>
        <input
          class="el-multi-select-checkbox"
          id="1"
          name="Other"
          type="checkbox"
          value="1"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="1"
        >
          Other
        </label>
      </div>
      <div
        class="apps-search-desktop-controls el-flex-container"
      >
        <div
          class="el-flex-align-center apps-search-container el-mr5 el-flex-container"
        >
          <span
            class="apps-search-input-icon el-icon"
            style="font-size: 1.25rem;"
          >
            <svg />
          </span>
          <input
            class="apps-search-input"
            placeholder="Search by App or Developer"
            type="text"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-column el-flex-container"
    >
      <p
        class="apps-filters-mobile-browse-by apps-search-mobile-controls el-has-no-margin el-small-text"
      >
        Browse By
      </p>
    </div>
    <div
      class="el-flex-justify-between el-flex-container"
    >
      <p
        class="apps-search-desktop-controls el-has-bold-text el-body-text"
      >
        Browse By
      </p>
    </div>
    <div
      class="el-fade-in apps-filters-categories el-multi-select-un-selected"
    >
      <input
        class="el-multi-select-checkbox"
        id="9"
        name="Tools"
        type="checkbox"
        value="9"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="9"
      >
        Tools
      </label>
      <input
        class="el-multi-select-checkbox"
        id="8"
        name="Social"
        type="checkbox"
        value="8"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="8"
      >
        Social
      </label>
      <input
        class="el-multi-select-checkbox"
        id="7"
        name="Marketing"
        type="checkbox"
        value="7"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="7"
      >
        Marketing
      </label>
      <input
        class="el-multi-select-checkbox"
        id="6"
        name="Communication"
        type="checkbox"
        value="6"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="6"
      >
        Communication
      </label>
      <input
        class="el-multi-select-checkbox"
        id="5"
        name="Media"
        type="checkbox"
        value="5"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="5"
      >
        Media
      </label>
      <input
        class="el-multi-select-checkbox"
        id="4"
        name="Events"
        type="checkbox"
        value="4"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="4"
      >
        Events
      </label>
      <input
        class="el-multi-select-checkbox"
        id="3"
        name="Finance"
        type="checkbox"
        value="3"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="3"
      >
        Finance
      </label>
      <input
        class="el-multi-select-checkbox"
        id="2"
        name="Productivity"
        type="checkbox"
        value="2"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="2"
      >
        Productivity
      </label>
      <input
        class="el-multi-select-checkbox"
        id="1"
        name="Other"
        type="checkbox"
        value="1"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="1"
      >
        Other
      </label>
    </div>
    <div
      class="apps-search-desktop-controls el-flex-container"
    >
      <div
        class="el-flex-align-center apps-search-container el-mr5 el-flex-container"
      >
        <span
          class="apps-search-input-icon el-icon"
          style="font-size: 1.25rem;"
        >
          <svg />
        </span>
        <input
          class="apps-search-input"
          placeholder="Search by App or Developer"
          type="text"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppSearchFilters should match a snapshot where has search 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-column el-flex-container"
      >
        <div
          class="apps-search-mobile-filter-controls-active apps-search-mobile-filter-controls"
        >
          <div
            class="el-flex-align-center apps-search-container el-flex-container"
          >
            <span
              class="apps-search-input-icon el-icon"
              style="font-size: 1.25rem;"
            >
              <svg />
            </span>
            <input
              class="apps-search-input"
              placeholder="Search by App or Developer"
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <p
          class="apps-search-desktop-controls el-has-bold-text el-body-text"
        >
          Browse By
        </p>
      </div>
      <div
        class="el-fade-in apps-filters-categories apps-search-desktop-controls el-multi-select-un-selected"
      >
        <input
          class="el-multi-select-checkbox"
          id="9"
          name="Tools"
          type="checkbox"
          value="9"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="9"
        >
          Tools
        </label>
        <input
          class="el-multi-select-checkbox"
          id="8"
          name="Social"
          type="checkbox"
          value="8"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="8"
        >
          Social
        </label>
        <input
          class="el-multi-select-checkbox"
          id="7"
          name="Marketing"
          type="checkbox"
          value="7"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="7"
        >
          Marketing
        </label>
        <input
          class="el-multi-select-checkbox"
          id="6"
          name="Communication"
          type="checkbox"
          value="6"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="6"
        >
          Communication
        </label>
        <input
          class="el-multi-select-checkbox"
          id="5"
          name="Media"
          type="checkbox"
          value="5"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="5"
        >
          Media
        </label>
        <input
          class="el-multi-select-checkbox"
          id="4"
          name="Events"
          type="checkbox"
          value="4"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="4"
        >
          Events
        </label>
        <input
          class="el-multi-select-checkbox"
          id="3"
          name="Finance"
          type="checkbox"
          value="3"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="3"
        >
          Finance
        </label>
        <input
          class="el-multi-select-checkbox"
          id="2"
          name="Productivity"
          type="checkbox"
          value="2"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="2"
        >
          Productivity
        </label>
        <input
          class="el-multi-select-checkbox"
          id="1"
          name="Other"
          type="checkbox"
          value="1"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="1"
        >
          Other
        </label>
      </div>
      <div
        class="apps-search-mobile-controls el-mb5 el-button-group"
      >
        <div
          class="el-button-group-inner"
        >
          <button
            class="el-intent-low el-button"
          >
            Clear Search Filters
            <div
              class="el-button-loader"
            />
          </button>
        </div>
      </div>
      <div
        class="apps-search-desktop-controls el-flex-container"
      >
        <div
          class="el-flex-align-center apps-search-container el-mr5 el-flex-container"
        >
          <span
            class="apps-search-input-icon el-icon"
            style="font-size: 1.25rem;"
          >
            <svg />
          </span>
          <input
            class="apps-search-input"
            placeholder="Search by App or Developer"
            type="text"
          />
        </div>
        <button
          class="el-intent-low el-button"
        >
          Clear Search Filters
          <div
            class="el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-column el-flex-container"
    >
      <div
        class="apps-search-mobile-filter-controls-active apps-search-mobile-filter-controls"
      >
        <div
          class="el-flex-align-center apps-search-container el-flex-container"
        >
          <span
            class="apps-search-input-icon el-icon"
            style="font-size: 1.25rem;"
          >
            <svg />
          </span>
          <input
            class="apps-search-input"
            placeholder="Search by App or Developer"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      class="el-flex-justify-between el-flex-container"
    >
      <p
        class="apps-search-desktop-controls el-has-bold-text el-body-text"
      >
        Browse By
      </p>
    </div>
    <div
      class="el-fade-in apps-filters-categories apps-search-desktop-controls el-multi-select-un-selected"
    >
      <input
        class="el-multi-select-checkbox"
        id="9"
        name="Tools"
        type="checkbox"
        value="9"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="9"
      >
        Tools
      </label>
      <input
        class="el-multi-select-checkbox"
        id="8"
        name="Social"
        type="checkbox"
        value="8"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="8"
      >
        Social
      </label>
      <input
        class="el-multi-select-checkbox"
        id="7"
        name="Marketing"
        type="checkbox"
        value="7"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="7"
      >
        Marketing
      </label>
      <input
        class="el-multi-select-checkbox"
        id="6"
        name="Communication"
        type="checkbox"
        value="6"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="6"
      >
        Communication
      </label>
      <input
        class="el-multi-select-checkbox"
        id="5"
        name="Media"
        type="checkbox"
        value="5"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="5"
      >
        Media
      </label>
      <input
        class="el-multi-select-checkbox"
        id="4"
        name="Events"
        type="checkbox"
        value="4"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="4"
      >
        Events
      </label>
      <input
        class="el-multi-select-checkbox"
        id="3"
        name="Finance"
        type="checkbox"
        value="3"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="3"
      >
        Finance
      </label>
      <input
        class="el-multi-select-checkbox"
        id="2"
        name="Productivity"
        type="checkbox"
        value="2"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="2"
      >
        Productivity
      </label>
      <input
        class="el-multi-select-checkbox"
        id="1"
        name="Other"
        type="checkbox"
        value="1"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="1"
      >
        Other
      </label>
    </div>
    <div
      class="apps-search-mobile-controls el-mb5 el-button-group"
    >
      <div
        class="el-button-group-inner"
      >
        <button
          class="el-intent-low el-button"
        >
          Clear Search Filters
          <div
            class="el-button-loader"
          />
        </button>
      </div>
    </div>
    <div
      class="apps-search-desktop-controls el-flex-container"
    >
      <div
        class="el-flex-align-center apps-search-container el-mr5 el-flex-container"
      >
        <span
          class="apps-search-input-icon el-icon"
          style="font-size: 1.25rem;"
        >
          <svg />
        </span>
        <input
          class="apps-search-input"
          placeholder="Search by App or Developer"
          type="text"
        />
      </div>
      <button
        class="el-intent-low el-button"
      >
        Clear Search Filters
        <div
          class="el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
